Bug 331040 - Play All doesn't play all songs when clicked
Summary: Play All doesn't play all songs when clicked
Status: RESOLVED FIXED
Alias: None
Product: plasma-mediacenter
Classification: Unmaintained
Component: MediaBrowser (other bugs)
Version First Reported In: 1.2.0
Platform: openSUSE Other
: NOR normal
Target Milestone: ---
Assignee: Sinny Kumari
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-12 10:35 UTC by Sujith H
Modified: 2014-08-04 16:04 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sujith H 2014-02-12 10:35:47 UTC
When clicked on "Play All" all the songs should be played under "Songs". It doesn't happen.

Reproducible: Always

Steps to Reproduce:
1) Launch PMC
2) Click on "All Music"
3) Click on "Play All"

User can see that by default all songs get poplulated in "Default" playlist. But it wont be played.
Comment 1 Harshit 2014-03-02 22:54:36 UTC
Patch submitted through reviewborad:
https://git.reviewboard.kde.org/r/116554/
Please look into it and comment.