Start playing after Play All is used

We should ask the model to start playing once we add all the songs
to the playlist as a result of the user using "Play All".

REVIEW: 118866
BUG: 331040