browsingbackends/metadatabackends/metadatamusicbackend/metadatamusicbackend.cpp
@@ -181,11 +181,10 @@ void MetadataMusicBackend::handleButtonClick(const QString& buttonName)
         auto model = pmcRuntime()->runtimeObjectAs<PlaylistModel>(PmcRuntime::PlaylistModel);
 
         if (model) {
+            model->switchToDefaultPlaylist();
+            model->clearPlaylist();
             addAllSongsToPlaylist(model);
-            if (pmcRuntime()) {
-                QObject *playlist = pmcRuntime()->property("playlist").value<QObject*>();
-                QMetaObject::invokeMethod(playlist, "playNext");
-            }
+            model->play(0);
         } else {
             kWarning() << "Failed to get a reference to playlist model";
         }
